allow admin licence key reissue
